--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.4.0",
     "expo": "~49.0.5",
     "expo-camera": "~13.4.2",
+    "expo-font": "~11.4.0",
     "expo-image": "~1.3.2",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
