--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "openai": "^3.3.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-toast-message": "^2.1.6",
