--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "expo": "~49.0.5",
     "expo-camera": "~13.4.2",
+    "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.2",
     "expo-splash-screen": "~0.20.5",
