--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.2",
+    "expo-localization": "~14.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "openai": "^3.3.0",
