--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~49.0.5",
     "expo-camera": "~13.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.8",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.2",
     "expo-linking": "~5.0.2",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-mmkv": "^2.10.2",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
