--- a/eas.json
+++ b/eas.json
@@ -5,9 +5,13 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
     "preview": {
+      "developmentClient": false,
       "distribution": "internal"
     },
     "production": {}
