--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
-    "expo": "~49.0.5",
-    "expo-camera": "~13.4.2",
-    "expo-crypto": "~12.4.1",
-    "expo-dev-client": "~2.4.8",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-localization": "~14.3.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.32",
+    "expo-camera": "~15.0.16",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.26",
+    "expo-font": "~12.0.10",
+    "expo-image": "~1.12.15",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
     "openai": "^3.3.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-mmkv": "^2.10.2",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.72.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
