--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo-camera": "~15.0.16",
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.26",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-haptics": "~13.0.1",
     "expo-image": "~1.12.15",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
